# SlangToon

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.py
backend/: .env.example  requirements.txt  run.py
backend/app/: config.py  dependencies.py  logging_config.py  main.py  middleware.py  slang_blacklist.py
backend/app/flow_log/: __init__.py  trace.py  trace_store.py
backend/app/graphs/: comic_graph.py  script_graph.py  state.py  trace_collector.py  trace_models.py  trace_store.py
backend/app/nodes/: comic_node.py  condense_node.py  prompt_node.py  save_node.py  script_node.py
backend/app/prompts/: analyze_prompt.py  comic_prompt.py  compose_prompt.py  condense_prompt.py  script_prompt.py  theme_packs.py
backend/app/routers/: analyze.py  comic.py  generate.py  history.py  script.py  script_stream.py  traces.py
backend/app/schemas/: analyze.py  comic.py  common.py  generate.py  history.py  script.py
backend/app/services/: analyze_service.py  comic_service.py  generate_service.py  history_service.py  image_gen_client.py  llm_client.py  script_service.py
backend/app/tracing/: models.py  (+6 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  test-setup.ts
tests/: README.md
tests/backend/: conftest.py
tests/e2e/: e2e_test.py
tests/manual/: debug_openrouter.py  llm_benchmark.py  test_image_gen_comparison.py  test_openrouter_i2i.py  test_replicate_gptimage2.py  test_replicate_real.py  verify_theme_packs.py
(+146 files in other folders)
