[project]
name = "slangtoon"
version = "1.0.0"
description = "SlangToon - AI slang-to-comic generator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "Pillow>=10.2.0",
    "python-multipart>=0.0.9",
    "langsmith>=0.1.0",
    "tiktoken>=0.7.0",
    "langgraph>=1.1.6",
    "langchain-core>=1.2.26",
    "json-repair>=0.59.4",
    "replicate>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
